[package]
name = "o_log_n"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = {workspace = true}
axum = {workspace = true}
aide = {workspace = true, features = ["redoc", "swagger", "scalar", "axum-json", "axum-query"]}
anyhow = {workspace = true}
env_logger = {workspace = true}
log = {workspace = true}

routes = {path = "../routes"}
services = {path = "../services"}