[package]
name = "routes"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {workspace = true}
aide = {workspace = true, features = ["redoc", "swagger", "scalar", "axum-json", "axum-query"]}
log = {workspace = true}
schemars = {workspace = true}
serde = {workspace = true}

services = {path = "../services"}